--- a/Frends.HIT.CSV/Frends.HIT.CSV.csproj
+++ b/Frends.HIT.CSV/Frends.HIT.CSV.csproj
@@ -1,7 +1,8 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFrameworks>netstandard2.0;net461</TargetFrameworks>
+    <PackageId>Frends.CSV.HIT</PackageId>
+    <TargetFrameworks>netstandard2.0;net461;net6.0</TargetFrameworks>
     <Version>1.0.0</Version>
     <GenerateDocumentationFile>true</GenerateDocumentationFile>
     <Company>HiQ Finland</Company>
