--- a/Frends.HIT.CSV/Frends.HIT.CSV.csproj
+++ b/Frends.HIT.CSV/Frends.HIT.CSV.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <PackageId>Frends.CSV.HIT</PackageId>
+    <PackageId>Frends.HIT.CSV</PackageId>
     <TargetFrameworks>netstandard2.0;net461;net6.0</TargetFrameworks>
     <Version>1.0.0</Version>
     <GenerateDocumentationFile>true</GenerateDocumentationFile>
