--- a/Frends.HIT.CSV/Frends.HIT.CSV.csproj
+++ b/Frends.HIT.CSV/Frends.HIT.CSV.csproj
@@ -2,7 +2,7 @@
 
   <PropertyGroup>
     <PackageId>Frends.HIT.CSV</PackageId>
-    <TargetFrameworks>netstandard2.0;net461;net6.0</TargetFrameworks>
+    <TargetFrameworks>netstandard2.0;net461;net6.0;net7.0</TargetFrameworks>
     <Version>1.0.0</Version>
     <GenerateDocumentationFile>true</GenerateDocumentationFile>
     <Company>HiQ Finland</Company>
